--- a/moviehouse/src/index.html
+++ b/moviehouse/src/index.html
@@ -8,7 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   <script src="https://player.vimeo.com/api/player.js"></script>
-  <script src="https://browser.sentry-cdn.com/5.12.1/bundle.min.js" integrity="sha384-y+an4eARFKvjzOivf/Z7JtMJhaN6b+lLQ5oFbBbUwZNNVir39cYtkjW1r6Xjbxg3" crossorigin="anonymous" ></script>
+  <script
+  src="https://browser.sentry-cdn.com/6.19.6/bundle.min.js"
+  integrity="sha384-XITe7oDiyULCpVPtGc52+ISVyD2MAEbbfpNsmYcfxClZXDw+IA906MSf6rhcdf3L"
+  crossorigin="anonymous"
+  ></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
 
