--- a/moviehouse/src/index.html
+++ b/moviehouse/src/index.html
@@ -18,12 +18,18 @@
 
 <body>
   <script>
+    // Only load Messenger Extensions if useExtensions=true is in the URL
     (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) { return; }
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/messenger.Extensions.js";
-      fjs.parentNode.insertBefore(js, fjs);
+      var url = new URL(window.location);
+      var useExtensions = url.searchParams.get('useExtensions') === 'true';
+
+      if (useExtensions) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) { return; }
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/messenger.Extensions.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }
     }(document, 'script', 'Messenger'));
   </script>
   <div class="container">
